# Project02

./: AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  _review_metrics.sh  vcpkg.json
.claude/: settings.local.json
.omc/: project-memory.json
.omc/sessions/: d81cade5-51be-4a39-aa60-9cee9aa6cdac.json
.omc/state/: agent-replay-3eec62ca-fe7c-4ad0-91f9-1c7755affb61.jsonl  agent-replay-6ddcc947-36fa-4fe2-b16b-f682a61f0460.jsonl  idle-notif-cooldown.json  last-tool-error.json
assets/audio/: manifest.json
assets/scripts/: abilities.lua  quests.lua  toys.lua  weather_config.lua
assets/scripts/dialogues/: daily_greetings.lua  first_meeting.lua
assets/shaders/: decor.vert  draw2d.vert  enemy.frag  enemy.vert  particle.vert  postprocess.vert  projectile.frag
doc/: map-spec.md  plan.md  plan2.md  plan3.md  plan4.md  plan5.md  plan6.md  plan7-开工顺序.md  plan7.md  怀旧主题-NPC设计.md  怀旧主题-README.md  怀旧主题-世界观与剧情.md  怀旧主题-主角与九公主.md  怀旧主题-主角与公主.md  怀旧主题-地图与场景.md  怀旧主题-完整剧情.md  怀旧主题-宣传动画.md  怀旧主题-怪物与BOSS.md  怀旧主题-技能与战斗.md  怀旧主题-梗与元素索引.md  怀旧主题-童心值动态技能.md  怀旧主题-音乐与音效.md  技术栈.md  星愿之子-专业评价.md  架构分层与重构路线.md
docs/superpowers/plans/: 2026-06-10-architecture-route3.md  2026-06-10-starchild-nostalgia-rework.md
docs/superpowers/specs/: 2026-06-10-starchild-nostalgia-rework-design.md
src/: main.cpp
src/App/: Application.cpp  Application.h  GameBootstrap.cpp  GameBootstrap.h  GameLoop.cpp  GameLoop.h  WindowEvents.cpp  WindowEvents.h
src/Engine/Audio/: AudioSystem.cpp  AudioSystem.h
src/Engine/Camera/: Camera2D.cpp  Camera2D.h
src/Engine/Physics/: PhysicsWorld.cpp  PhysicsWorld.h
src/Engine/Renderer/: DecorRenderer.cpp  DecorRenderer.h  DialogueUI.cpp  DialogueUI.h  Draw2D.cpp  Draw2D.h  MiniMap.cpp  MiniMap.h  ParticleSystem.cpp  ParticleSystem.h  PostProcess.cpp  PostProcess.h  RenderLayer.h  TextRenderer.cpp  TextRenderer.h
src/Engine/Scripting/: LuaVM.cpp  LuaVM.h
src/Game/: Drop.cpp  Drop.h  GameState.h  Health.cpp  Health.h  SaveSystem.cpp  SaveSystem.h  StateContexts.cpp  StateContexts.h
src/Game/AI/: Enemy.cpp  Enemy.h  EnemyDefinition.cpp  EnemyDefinition.h  PathfindingSystem.cpp  PathfindingSystem.h
src/Game/Ability/: BondTechnique.cpp  BondTechnique.h  ChildlikeSkillProfile.cpp  ChildlikeSkillProfile.h  Lightning.cpp  Lightning.h  Projectile.cpp  Projectile.h  Shield.cpp  Shield.h  SuperStrength.cpp  SuperStrength.h
src/Game/Boss/: BossController.cpp  BossController.h  PopupCrownBoss.cpp  PopupCrownBoss.h
src/Game/Building/: BuildingPhysicsSync.cpp  BuildingPhysicsSync.h  BuildingPlacementRules.cpp  BuildingPlacementRules.h  BuildingStats.cpp  BuildingStats.h  BuildingSystem.cpp  BuildingSystem.h  Furniture.cpp  Furniture.h
src/Game/Controllers/: AbilityInputController.cpp  AbilityInputController.h  BuildingInputController.cpp  BuildingInputController.h  InputController.cpp  InputController.h  InputState.h  InteractionInputController.cpp  InteractionInputController.h  MainMenuInputController.cpp  MainMenuInputController.h
src/Game/Data/: DialogueScriptLoader.cpp  DialogueScriptLoader.h  EmotionConfigLoader.cpp  EmotionConfigLoader.h  FurnitureDefinitionLoader.cpp  FurnitureDefinitionLoader.h  LuaConfigRepository.cpp  LuaConfigRepository.h  QuestDefinitionLoader.cpp  QuestDefinitionLoader.h  SaveData.h  SaveMigration.cpp  SaveMigration.h  SaveRepository.cpp  SaveRepository.h  SaveSerializer.cpp  SaveSerializer.h  TimeConfigLoader.cpp  TimeConfigLoader.h  ToyDefinitionLoader.cpp  ToyDefinitionLoader.h  WeatherConfigLoader.cpp  WeatherConfigLoader.h
src/Game/Emotion/: EmotionConfig.h  EmotionSystem.cpp  EmotionSystem.h  VentAnimation.cpp  VentAnimation.h
src/Game/Inventory/: Inventory.cpp  Inventory.h  ItemCatalog.cpp  ItemCatalog.h
src/Game/Presentation/: AbilityView.cpp  AbilityView.h  AimReticleView.cpp  AimReticleView.h  BuildingView.cpp  BuildingView.h  CharacterPanelView.cpp  CharacterPanelView.h  EntityView.cpp  EntityView.h  GameMenuView.cpp  GameMenuView.h  GameRenderer.cpp  GameRenderer.h  HudView.cpp  HudView.h  InventoryView.cpp  InventoryView.h  MainMenuView.cpp  MainMenuView.h  MiniMapPresenter.cpp  MiniMapPresenter.h  ParticleView.cpp  ParticleView.h  PresentationModelBuilder.cpp  PresentationModelBuilder.h  QuestLogView.cpp  QuestLogView.h  WindowTitlePresenter.cpp  WindowTitlePresenter.h  WorldPresentationBuilder.cpp  WorldPresentationBuilder.h  WorldRenderer.cpp  WorldRenderer.h  WorldSignView.cpp  WorldSignView.h
src/Game/Progress/: StoryProgress.cpp  StoryProgress.h
src/Game/Quest/: QuestSystem.cpp  QuestSystem.h  QuestTypes.h
src/Game/Scenes/: AppMode.h  IScene.h  MainMenuScene.cpp  MainMenuScene.h  SceneManager.cpp  SceneManager.h  WorldScene.cpp  WorldScene.h
src/Game/Services/: AbilityUpdateService.cpp  AbilityUpdateService.h  AudioService.cpp  AudioService.h  CombatCollisionService.cpp  CombatCollisionService.h  CombatService.cpp  CombatService.h  DialogueService.cpp  DialogueService.h  DropCollectionService.cpp  DropCollectionService.h  EnemySpawnService.cpp  EnemySpawnService.h  GameSessionService.cpp  GameSessionService.h  NoticeService.cpp  NoticeService.h  PlayerInputQuery.cpp  PlayerInputQuery.h  PlayerLifecycleService.cpp  PlayerLifecycleService.h  PlayerMotionService.cpp  PlayerMotionService.h  ProgressionUpdateService.cpp  ProgressionUpdateService.h  ProjectileTrailService.cpp  ProjectileTrailService.h  RegionService.cpp  RegionService.h  RegionUpdateService.cpp  RegionUpdateService.h  SaveApplier.cpp  SaveApplier.h  SaveGameService.cpp  SaveGameService.h  (+12 more)
src/Utils/: Math.h  ShaderUtils.h
tests/: ArcadePortalRenderSmokeTest.cpp  AudioManifestTest.cpp  ChildlikeSkillProfileTest.cpp  CombatCastServiceTest.cpp  CombatCollisionServiceTest.cpp  DialogueServiceRewardTest.cpp  EmotionTierTest.cpp  EnemyDefinitionTest.cpp  InputControllerBoundaryTest.cpp  InventoryItemTest.cpp  PopupCrownBossTest.cpp  QuestObjectiveFlowTest.cpp  QuestSystemFlowTest.cpp  RegionFactoryNostalgiaTest.cpp  RegionServiceDoorTest.cpp  SaveApplierIntegrationTest.cpp  SaveDataRoundTripTest.cpp  StoryProgressTest.cpp  TestSupport.h
(+34 files in other folders)
